changing to index.php

--- a/HTML-UI/configfiles/nginx/conf/nginx.conf
+++ b/HTML-UI/configfiles/nginx/conf/nginx.conf
@@ -37,7 +37,7 @@ server {
     server_name localhost;
 
     root NGINX_INSTALLDIR/html;
-    index skin_upload.php;
+    index index.php;
 
     error_log NGINX_INSTALLDIR/logs/localhost.error.log;
     access_log NGINX_INSTALLDIR/logs/localhost.access.log;
