--- a/HTML-UI/configfiles/php/php.ini
+++ b/HTML-UI/configfiles/php/php.ini
@@ -19,7 +19,7 @@ post_max_size = 100M
 default_mimetype = "text/html"
 default_charset = "UTF-8"
 include_path = "."
-extension_dir = "c:\nginx\php\ext"
+extension_dir = "NGINX_INSTALLDIR\php\ext"
 enable_dl = Off
 file_uploads = On
 upload_max_filesize = 100M
@@ -42,7 +42,7 @@ extension=sqlite3
 
 [Session]
 session.save_handler = files
-session.save_path = "c:\nginx\temp"
+session.save_path = "NGINX_INSTALLDIR\temp"
 session.use_strict_mode = 0
 session.use_cookies = 1
 session.use_only_cookies = 1
